--- a/BlogPost/Views/Blogs/Index.cshtml
+++ b/BlogPost/Views/Blogs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<dynamic>
+﻿@model IEnumerable<BlogPostBll.Models.Blog>
 
 <h1>Blogs</h1>
 <ul>
@@ -9,6 +9,9 @@
             @blog.Text<br />
             <a href="/Blogs/Details/@blog.Id">View Details</a>
             <a href="/Blogs/Edit/@blog.Id">Edit</a>
+            <form method="post" action="/Blogs/Delete/@blog.Id" style="display:inline;">
+                <button type="submit" onclick="return confirm('Are you sure you want to delete this blog?');">Delete</button>
+            </form>
         </li>
     }
 </ul>
