--- a/BlogPost/Views/Blogs/Index.cshtml
+++ b/BlogPost/Views/Blogs/Index.cshtml
@@ -81,6 +81,10 @@
                 </form>
             </div>
 
+            <button class="btn btn-secondary mb-3" onclick="window.location.href='/User/Index'">Login</button>
+            <div id="filters" class="mb-4">
+            </div>
+
             <ul>
                 @foreach (var blog in Model)
                 {
@@ -105,6 +109,12 @@
             const filters = document.getElementById('filters');
             filters.style.display = filters.style.display === ''  ? 'block' : '';
         }
+    </script>
+
+    <script>
+    function openPage(url) {        
+        window.location.href = url;
+    }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
